--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,3 +1,7 @@
+body {
+	overflow: scroll;
+}
+
 .campo-digitacao {
 	font-size: 20px;
 	height: 130px;
@@ -13,13 +17,47 @@
 }
 
 .icones {
-  vertical-align: middle;
+	vertical-align: middle;
 }
 
 .borda-verde {
-  border: 3px solid green;
+	border: 3px solid green;
 }
 
 .borda-vermelha {
-  border: 3px solid red;
+	border: 3px solid red;
+}
+
+.placar {
+	display: none;
+}
+
+#erro {
+	color: red;
+	display: none;
+}
+
+#spinner {
+	display: none;
+}
+
+#frase-id {
+	width: 40px;
+}
+
+#botao-sync {
+	float: right;
+}
+
+.select-usuarios {
+	display: inline-block;
+}
+
+#usuarios {
+	display: block;
+}
+
+.selectize-input {
+	width: 150px;
+	vertical-align: middle;
 }
